2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile (TEXINPUTS): set TEXINPUTS so our
	texinfo.tex is always used.
	
2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/axis.hh: rename from axes.hh

	* lily/include/text-interface.hh (Module): rename from text-item.hh

	* VERSION (PATCH_LEVEL): release 2.5.29

	* ttftool/parse.c (readNamingTable): handle Apple/8bit encoding too.

	* scm/framework-ps.scm (font-file-as-ps-string): new function.
	(handle-macfont): new function. Call fondu for Native mac fonts.

	* scm/define-markup-commands.scm (fill-line): handle text-widths =
	'() case.

2005-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/ps-to-png.scm (make-ps-images): Bugfix: `Pages: 1\n' is not
	multi-page.  Fix .eps regular expression.

2005-06-07  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/putting.itely: add info on modifying templates.

	* Documentation/user/lilypond.itely, converters.itely, invoking.itely:
	misc small changes.

2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/ps-to-png.scm (make-ps-images): no paper size for multi-page.

	* scripts/lilypond-ps2png.scm

	* VERSION (PACKAGE_NAME): release 2.5.28

2005-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (prepend_env_path): Do not append /, that does not
	work.  Localedir lives in datadir, not in prefix.

	* scm/framework-ps.scm (write-preamble): Remove load-font-via-GS
	hack for windows.

	* flower/include/file-cookie.hh: Compile fix.

2005-06-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly: add \defaultchild to InnerStaffGroup. 

	* scm/ps-to-png.scm (gulp-port): rename from read. Don't redefine
	system primitives.
	(gulp-port): using read-string!/partial. We don't want to read an
	entire PS file  (GUILE 1.6 limits strings to 16M) 

	* scm/define-grobs.scm (all-grob-descriptions): remove arch-*
	properties. Add font-interface. 

	* scm/define-grob-properties.scm (all-user-grob-properties):